Closed Bug 1808487 Opened 2 years ago Closed 1 years ago

When media.hardware-video-decoding.enabled is set to false HARDWARE_VIDEO_DECODING is missing at about:support

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

VERIFIED FIXED
115 Branch
Tracking Status
firefox115 --- verified
firefox116 --- verified

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When media.hardware-video-decoding.enabled is set to false HARDWARE_VIDEO_DECODING is missing at about:support page.

Flags: needinfo?(azebrowski)
Severity: -- → S3
Priority: -- → P3

I did some initial investigation on this and have some ideas, and will be following up. As a workaround in the meantime, I wanted to note that clicking Copy raw data to clipboard in about:support still copies over information for that pref.

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/4e43ca74c919 Print FEATURE_HARDWARE_VIDEO_DECODING state on about:support if it's disabled by user r=alwu
Status: ASSIGNED → RESOLVED
Closed: 1 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch

Reproducible on a 2023-05-10 Nightly build on Ubuntu 22.
Verified as fixed on Firefox 115.0b8(build ID: 20230620180051) and Nightly 116.0a1(build ID: 20230621161008) on Ubuntu 22 ,macOS 12, Windows 10.
HARDWARE_VIDEO_DECODING(when media.hardware-video-decoding.enabled is set to false ) can now be found in about:support.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Flags: needinfo?(azebrowski)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: