Bug 1808487 Print FEATURE_HARDWARE_VIDEO_DECODING state on about:support if it's disabled by user r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D177094